finished rest of hover text
Took 1 hour 26 minutes