@@ -12,6 +12,7 @@ import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.Style;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceLocation;
@@ -35,14 +36,14 @@ public class ToolStatsCategory implements IRecipeCategory<ToolStatsWrapper> {
 
     public ToolStatsCategory(IGuiHelper guiHelper) {
         this.BACKGROUND = guiHelper.createBlankDrawable(WIDTH, HEIGHT);
-        // only draws 1x1 for some reason
+        // TODO: only draws 1x1 for some reason
         this.ICON = guiHelper.createDrawable(new ResourceLocation(MOD_ID, "textures/gui/icon.png"), 0, 0, 16, 16);
     }
 
     @Override
     public void draw(ToolStatsWrapper recipe, IRecipeSlotsView recipeSlotsView, PoseStack poseStack, double mouseX, double mouseY) {
-        final String materialName = recipe.getMaterialId().getPath();
         final Font font = Minecraft.getInstance().font;
+        final String materialPath = recipe.getMaterialId().getPath();
 
         final int MATERIAL_COLOR = MaterialTooltipCache.getColor(recipe.getMaterialId()).getValue();
         final int BLACK = 8;
@@ -53,14 +54,21 @@ public class ToolStatsCategory implements IRecipeCategory<ToolStatsWrapper> {
         final int LINE_HEIGHT = 10;
         float lineNumber = 0;
 
-        font.drawShadow(poseStack, getPattern("material.tconstruct." + recipe.getMaterialId().getPath()), (WIDTH - font.getSplitter().stringWidth(materialName)) / 2, 4, MATERIAL_COLOR);
+        font.drawShadow(poseStack, getPattern("material.tconstruct." + materialPath), (WIDTH - font.getSplitter().stringWidth(materialPath)) / 2, 4, MATERIAL_COLOR);
 
         Optional<HeadMaterialStats> headStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), HeadMaterialStats.ID);
-        List<ModifierEntry> headTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HeadMaterialStats.ID);
+        Optional<ExtraMaterialStats> extraStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), ExtraMaterialStats.ID);
+        Optional<HandleMaterialStats> handleStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), HandleMaterialStats.ID);
+        Optional<LimbMaterialStats> limbStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), LimbMaterialStats.ID);
+        Optional<GripMaterialStats> gripStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), GripMaterialStats.ID);
+        Optional<BowstringMaterialStats> stringStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), BowstringMaterialStats.ID);
+
         if (headStats.isPresent()) {
             // 545454
-            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.head")), 0, lineNumber * LINE_HEIGHT + LINE_OFFSET, BLACK);
-            font.draw(poseStack, String.format("%s", headTrait.get(0).getId().getPath()), WIDTH - font.getSplitter().stringWidth(headTrait.get(0).getId().getPath()), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            List<ModifierEntry> headTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HeadMaterialStats.ID);
+            String pattern = getPattern("modifier.tconstruct." + headTrait.get(0).getId().getPath());
+            font.draw(poseStack, String.format("%s", pattern), WIDTH - font.getSplitter().stringWidth(pattern), lineNumber * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.head")), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, BLACK);
             font.draw(poseStack, String.format("%s%d", getPattern("tool_stat.tconstruct.durability"), headStats.get().getDurability()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s%s", getPattern("tool_stat.tconstruct.harvest_tier"), headStats.get().getTierId().getPath()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s%.2f", getPattern("tool_stat.tconstruct.mining_speed"), headStats.get().getMiningSpeed()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
@@ -68,19 +76,19 @@ public class ToolStatsCategory implements IRecipeCategory<ToolStatsWrapper> {
             lineNumber += 0.5f;
         }
 
-        Optional<ExtraMaterialStats> extraStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), ExtraMaterialStats.ID);
-        List<ModifierEntry> extraTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), ExtraMaterialStats.ID);
         if (extraStats.isPresent()) {
-            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.extra")), 0, lineNumber * LINE_HEIGHT + LINE_OFFSET, BLACK);
-            font.draw(poseStack, String.format("%s", extraTrait.get(0).getId().getPath()), WIDTH - font.getSplitter().stringWidth(extraTrait.get(0).getId().getPath()), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            List<ModifierEntry> extraTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), ExtraMaterialStats.ID);
+            String pattern = getPattern("modifier.tconstruct." + extraTrait.get(0).getId().getPath());
+            font.draw(poseStack, String.format("%s", pattern), WIDTH - font.getSplitter().stringWidth(pattern), lineNumber * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.extra")), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, BLACK);
             lineNumber += 0.5f;
         }
 
-        Optional<HandleMaterialStats> handleStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), HandleMaterialStats.ID);
-        List<ModifierEntry> handleTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HandleMaterialStats.ID);
         if (handleStats.isPresent()) {
-            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.head")), 0, lineNumber * LINE_HEIGHT + LINE_OFFSET, BLACK);
-            font.draw(poseStack, String.format("%s", handleTrait.get(0).getId().getPath()), WIDTH - font.getSplitter().stringWidth(handleTrait.get(0).getId().getPath()), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            List<ModifierEntry> handleTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HandleMaterialStats.ID);
+            String pattern = getPattern("modifier.tconstruct." + handleTrait.get(0).getId().getPath());
+            font.draw(poseStack, String.format("%s", pattern), WIDTH - font.getSplitter().stringWidth(pattern), lineNumber * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.handle")), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, BLACK);
             font.draw(poseStack, String.format("%s%.2fx", getPattern("tool_stat.tconstruct.durability"), handleStats.get().getDurability()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s%.2fx", getPattern("tool_stat.tconstruct.attack_damage"), handleStats.get().getAttackDamage()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s%.2fx", getPattern("tool_stat.tconstruct.attack_speed"), handleStats.get().getAttackSpeed()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
@@ -88,11 +96,11 @@ public class ToolStatsCategory implements IRecipeCategory<ToolStatsWrapper> {
             lineNumber += 0.5f;
         }
 
-        Optional<LimbMaterialStats> limbStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), LimbMaterialStats.ID);
-        List<ModifierEntry> limbTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), LimbMaterialStats.ID);
         if (limbStats.isPresent()) {
-            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.limb")), 0, lineNumber * LINE_HEIGHT + LINE_OFFSET, BLACK);
-            font.draw(poseStack, String.format("%s", limbTrait.get(0).getId().getPath()), WIDTH - font.getSplitter().stringWidth(limbTrait.get(0).getId().getPath()), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            List<ModifierEntry> limbTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), LimbMaterialStats.ID);
+            String pattern = getPattern("modifier.tconstruct." + limbTrait.get(0).getId().getPath());
+            font.draw(poseStack, String.format("%s", pattern), WIDTH - font.getSplitter().stringWidth(pattern), lineNumber * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.limb")), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, BLACK);
             font.draw(poseStack, String.format("%s%d", getPattern("tool_stat.tconstruct.durability"), limbStats.get().getDurability()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s+%.2f", getPattern("tool_stat.tconstruct.draw_speed"), limbStats.get().getDrawSpeed()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s+%.2f", getPattern("tool_stat.tconstruct.velocity"), limbStats.get().getVelocity()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
@@ -100,73 +108,140 @@ public class ToolStatsCategory implements IRecipeCategory<ToolStatsWrapper> {
             lineNumber += 0.5f;
         }
 
-        Optional<GripMaterialStats> gripStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), GripMaterialStats.ID);
-        List<ModifierEntry> gripTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), GripMaterialStats.ID);
         if (gripStats.isPresent()) {
-            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.grip")), 0, lineNumber * LINE_HEIGHT + LINE_OFFSET, BLACK);
-            font.draw(poseStack, String.format("%s", gripTrait.get(0).getId().getPath()), WIDTH - font.getSplitter().stringWidth(gripTrait.get(0).getId().getPath()), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            List<ModifierEntry> gripTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), GripMaterialStats.ID);
+            String pattern = getPattern("modifier.tconstruct." + gripTrait.get(0).getId().getPath());
+            font.draw(poseStack, String.format("%s", pattern), WIDTH - font.getSplitter().stringWidth(pattern), lineNumber * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
+            font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.grip")), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, BLACK);
             font.draw(poseStack, String.format("%s%.2fx", getPattern("tool_stat.tconstruct.durability"), gripStats.get().getDurability()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s+%.2f", getPattern("tool_stat.tconstruct.accuracy"), gripStats.get().getAccuracy()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             font.draw(poseStack, String.format("%s%.2f", getPattern("tool_stat.tconstruct.attack_damage"), gripStats.get().getMeleeAttack()), 0, lineNumber++ * LINE_HEIGHT + LINE_OFFSET, GRAY);
             lineNumber += 0.5f;
         }
 
-        Optional<BowstringMaterialStats> stringStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), BowstringMaterialStats.ID);
-        List<ModifierEntry> stringTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), BowstringMaterialStats.ID);
         if (stringStats.isPresent()) {
+            List<ModifierEntry> stringTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), BowstringMaterialStats.ID);
+            String pattern = getPattern("modifier.tconstruct." + stringTrait.get(0).getId().getPath());
+            font.draw(poseStack, String.format("%s", pattern), WIDTH - font.getSplitter().stringWidth(pattern), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
             font.draw(poseStack, String.format("[%s]", getPattern("stat.tconstruct.bowstring")), 0, lineNumber * LINE_HEIGHT + LINE_OFFSET, BLACK);
-            font.draw(poseStack, String.format("%s", stringTrait.get(0).getId().getPath()), WIDTH - font.getSplitter().stringWidth(stringTrait.get(0).getId().getPath()), lineNumber++ * LINE_HEIGHT + LINE_OFFSET, LIGHT_GRAY);
-            lineNumber += 0.5f;
         }
-
-//        System.out.printf("x: %s y: %s\n", mouseX, mouseY);
 
     }
 
     @Override
     public void setRecipe(IRecipeLayoutBuilder builder, ToolStatsWrapper recipe, IFocusGroup focuses) {
         if (!recipe.material.isCraftable()) {
-            // float is in milli buckets
-            builder.addSlot(RecipeIngredientRole.RENDER_ONLY, 18, 0).addFluidStack(recipe.getFluidStack().getFluid(), 1000);
-            builder.addInvisibleIngredients(RecipeIngredientRole.INPUT).addFluidStack(recipe.getFluidStack().getFluid(), 1000);
-            builder.addInvisibleIngredients(RecipeIngredientRole.OUTPUT).addFluidStack(recipe.getFluidStack().getFluid(), 1000);
+            final int BUCKET = 1000;
+            builder.addSlot(RecipeIngredientRole.RENDER_ONLY, 18, 0).addFluidStack(recipe.getFluidStack().getFluid(), BUCKET);
+            builder.addInvisibleIngredients(RecipeIngredientRole.INPUT).addFluidStack(recipe.getFluidStack().getFluid(), BUCKET);
+            builder.addInvisibleIngredients(RecipeIngredientRole.OUTPUT).addFluidStack(recipe.getFluidStack().getFluid(), BUCKET);
         }
         builder.addSlot(RecipeIngredientRole.RENDER_ONLY, 0, 0).addItemStacks(recipe.getRepresentativeItems());
         builder.addInvisibleIngredients(RecipeIngredientRole.INPUT).addItemStacks(recipe.getRepresentativeItems());
         builder.addInvisibleIngredients(RecipeIngredientRole.OUTPUT).addItemStacks(recipe.getRepresentativeItems());
 
-        builder.addSlot(RecipeIngredientRole.RENDER_ONLY, (WIDTH - 18), 0).addItemStacks(recipe.getParts());
+        builder.addSlot(RecipeIngredientRole.RENDER_ONLY, (WIDTH - 16), 0).addItemStacks(recipe.getParts());
     }
 
     @Override
     public List<Component> getTooltipStrings(ToolStatsWrapper recipe, IRecipeSlotsView recipeSlotsView, double mouseX, double mouseY) {
-        final String materialName = recipe.getMaterialId().getPath();
         final Font font = Minecraft.getInstance().font;
-        final int LINE_OFFSET = 20;
+        final String materialName = recipe.getMaterialId().getPath();
+
+        final int WHITE = 16777215;
+
+        final int LINE_OFFSET = 18;
         final int LINE_HEIGHT = 10;
         float lineNumber = 0;
 
-        if (((WIDTH - font.getSplitter().stringWidth(materialName)) / 2) <= mouseX && (mouseX <= ((WIDTH / 2) + font.getSplitter().stringWidth(materialName))) && 0 <= mouseY && mouseY <= 20) {
-            return Collections.singletonList(new TranslatableComponent("material.tconstruct."+materialName+".flavor"));
+        int matWidth = font.width(materialName);
+        if (inBox(mouseX, mouseY, (WIDTH - matWidth) / 2, 3, matWidth, LINE_HEIGHT)) {
+            return Collections.singletonList(new TranslatableComponent("material.tconstruct." + materialName + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)));
         }
-
 
         Optional<HeadMaterialStats> headStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), HeadMaterialStats.ID);
-//        Optional<ExtraMaterialStats> extraStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), ExtraMaterialStats.ID);
-//        Optional<HandleMaterialStats> handleStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), HandleMaterialStats.ID);
-//        Optional<LimbMaterialStats> limbStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), LimbMaterialStats.ID);
-//        Optional<GripMaterialStats> gripStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), GripMaterialStats.ID);
-//        Optional<BowstringMaterialStats> stringStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), BowstringMaterialStats.ID);
-        List<ModifierEntry> headTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HeadMaterialStats.ID);
+        Optional<ExtraMaterialStats> extraStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), ExtraMaterialStats.ID);
+        Optional<HandleMaterialStats> handleStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), HandleMaterialStats.ID);
+        Optional<LimbMaterialStats> limbStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), LimbMaterialStats.ID);
+        Optional<GripMaterialStats> gripStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), GripMaterialStats.ID);
+        Optional<BowstringMaterialStats> stringStats = MaterialRegistry.getInstance().getMaterialStats(recipe.getMaterialId(), BowstringMaterialStats.ID);
 
         if (headStats.isPresent()) {
-            int width = font.width(headTrait.get(0).getId().getPath());
-            if (WIDTH - width <= mouseX && mouseX <= WIDTH && 20 <= mouseY && mouseY <= 30) {
-                // TODO: add flavor text
-                return Collections.singletonList(new TranslatableComponent("modifier.tconstruct."+headTrait.get(0).getId().getPath()+".description"));
+            ModifierEntry headTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HeadMaterialStats.ID).get(0);
+            String path = headTrait.getId().getPath();
+            String pattern = getPattern("modifier.tconstruct." + path);
+            int textWidth = font.width(pattern);
+            if (inBox(mouseX, mouseY, WIDTH - textWidth, (int) (lineNumber * LINE_HEIGHT + LINE_OFFSET), textWidth, LINE_HEIGHT)) {
+                return List.of(new TranslatableComponent("modifier.tconstruct." + path + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)),
+                        new TranslatableComponent("modifier.tconstruct." + path + ".description"));
+            }
+            lineNumber += 5.5f;
+        }
+
+        if (extraStats.isPresent()) {
+            ModifierEntry extraTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), ExtraMaterialStats.ID).get(0);
+            String path = extraTrait.getId().getPath();
+            String pattern = getPattern("modifier.tconstruct." + path);
+            int textWidth = font.width(pattern);
+            if (inBox(mouseX, mouseY, WIDTH - textWidth, (int) (lineNumber * LINE_HEIGHT + LINE_OFFSET), textWidth, LINE_HEIGHT)) {
+                return List.of(new TranslatableComponent("modifier.tconstruct." + path + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)),
+                        new TranslatableComponent("modifier.tconstruct." + path + ".description"));
+            }
+            lineNumber += 1.5f;
+        }
+
+        if (handleStats.isPresent()) {
+            ModifierEntry handleTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), HandleMaterialStats.ID).get(0);
+            String path = handleTrait.getId().getPath();
+            String pattern = getPattern("modifier.tconstruct." + path);
+            int textWidth = font.width(pattern);
+            if (inBox(mouseX, mouseY, WIDTH - textWidth, (int) (lineNumber * LINE_HEIGHT + LINE_OFFSET), textWidth, LINE_HEIGHT)) {
+                return List.of(new TranslatableComponent("modifier.tconstruct." + path + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)),
+                        new TranslatableComponent("modifier.tconstruct." + path + ".description"));
+            }
+            lineNumber += 5.5f;
+        }
+
+        if (limbStats.isPresent()) {
+            ModifierEntry limbTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), LimbMaterialStats.ID).get(0);
+            String path = limbTrait.getId().getPath();
+            String pattern = getPattern("modifier.tconstruct." + path);
+            int textWidth = font.width(pattern);
+            if (inBox(mouseX, mouseY, WIDTH - textWidth, (int) (lineNumber * LINE_HEIGHT + LINE_OFFSET), textWidth, LINE_HEIGHT)) {
+                return List.of(new TranslatableComponent("modifier.tconstruct." + path + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)),
+                        new TranslatableComponent("modifier.tconstruct." + path + ".description"));
+            }
+            lineNumber += 5.5f;
+        }
+
+        if (gripStats.isPresent()) {
+            ModifierEntry gripTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), GripMaterialStats.ID).get(0);
+            String path = gripTrait.getId().getPath();
+            String pattern = getPattern("modifier.tconstruct." + path);
+            int textWidth = font.width(pattern);
+            if (inBox(mouseX, mouseY, WIDTH - textWidth, (int) (lineNumber * LINE_HEIGHT + LINE_OFFSET), textWidth, LINE_HEIGHT)) {
+                return List.of(new TranslatableComponent("modifier.tconstruct." + path + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)),
+                        new TranslatableComponent("modifier.tconstruct." + path + ".description"));
+            }
+            lineNumber += 4.5f;
+        }
+
+        if (stringStats.isPresent()) {
+            ModifierEntry stringTrait = MaterialRegistry.getInstance().getTraits(recipe.getMaterialId(), BowstringMaterialStats.ID).get(0);
+            String path = stringTrait.getId().getPath();
+            String pattern = getPattern("modifier.tconstruct." + path);
+            int textWidth = font.width(pattern);
+            if (inBox(mouseX, mouseY, WIDTH - textWidth, (int) (lineNumber * LINE_HEIGHT + LINE_OFFSET), textWidth, LINE_HEIGHT)) {
+                return List.of(new TranslatableComponent("modifier.tconstruct." + path + ".flavor").setStyle(Style.EMPTY.withItalic(true).withColor(WHITE)),
+                        new TranslatableComponent("modifier.tconstruct." + path + ".description"));
             }
         }
+
         return Collections.emptyList();
+    }
+
+    private boolean inBox(double mX, double mY, int x, int y, int w, int h) {
+        return (x <= mX && mX <= x + w && y <= mY && mY <= y + h);
     }
 
     @Override
